Added translation for "Photo"

--- a/locale/de_DE/LC_MESSAGES/webchess.po
+++ b/locale/de_DE/LC_MESSAGES/webchess.po
@@ -328,6 +328,9 @@ msgstr "GNU Chess Einfache"
 msgid "Master"
 msgstr "Master"
 
+msgid "Photo"
+msgstr "Foto"
+
 #: C:\projects\chess\webchess/mainmenu.php:739
 #: C:\projects\chess\webchess/newuser.php:115
 msgid "Auto-reload"
